--- a/about.qmd
+++ b/about.qmd
@@ -22,15 +22,17 @@ about:
 
 I am an Associate Professor and Director of Undergraduate Studies in the [Department of Criminal Justice](https://criminaljustice.indiana.edu/) at [Indiana University Bloomington](https://www.indiana.edu/). I received my Ph.D. in Sociology from the [Department of Sociology and Anthropology](https://socant.chass.ncsu.edu/) at North Carolina State University in 2011. 
 
-While my research covers a variety of specific topics, I am usually trying to better understand how our social environments affect the ways that we think and behave. I am especially curious about what we learn from our social environments and, in particular, how conflict or coercion in social experiences (e.g., controlling parenting; racial discrimination; problematic encounters with police) might affect how we think, how interact with others, and who we are (i.e., our identities). For instance, coercive experiences might erode our sense of trust in others, weaken our social relationships, undermine our moral beliefs, compromise our mental health, and encourage us to comply with social rules - or to break them. 
+In my research, I often aim to understand how our social environments affect the ways that we think and behave. I am especially curious about how conflict or coercion in social experiences (e.g., controlling parenting; racial discrimination; problematic encounters with police) might affect how we think, how interact with others, and who we are (i.e., our identities). For instance, coercive experiences might erode our sense of trust in others, weaken our social relationships, undermine our moral beliefs, compromise our mental health, and encourage us to comply with social rules - or to break them. 
 
-While I sometimes analyze existing data in my research, I typically prefer to collect new or "primary" data. Often, our scientific explanations ("theories") imply the existence of specific causal mechanisms, but existing data sources do not always contain good measures of those mechanisms. In primary data collection, we can attempt to more directly measure theoretical mechanisms and then test causal claims. I especially enjoy collecting data from people in international locations that are rarely studied by US researchers. International data allow us to really test whether our scientific explanations about human behavior actually "work" (i.e., generalize) in the ways that we think they do for people living in social environments that are different from our own. Likewise, with the help of many talented collaborators, have collected data from diverse local and international populations, including adults in Bangladesh, Serbia, and Ukraine, restaurant servers and customers across the U.S., college students at Southern and Midwestern universities, and adults in the US who participate in online panels (e.g., MTurk; Prolific). 
+In my recent and current projects, I rely on Bayesian modeling techniques, and I explore ways to improve the utility and reproducibility of statistical practices that are normally adopted in our field. 
 
-With respect to analytic methods, I rely on various statistical techniques to analyze data from cross-sectional, panel, multi-generational, cross-national, and time-series research designs. Recently, I have begun adopting Bayesian modeling techniques and exploring ways to improve the utility and reproducibility of statistical practices normatively adopted in our field. 
+If you read my work, you may notice that I frequently collect new or "primary" data. This is because our scientific explanations (theories) about human behavior imply the existence of specific causal mechanisms, but existing data sources do not always contain good measures of those mechanisms. In primary data collection, we can attempt to more directly measure theoretical mechanisms and then more convincingly test causal claims. 
+
+Additionally, I especially enjoy collecting data from people in international locations that are rarely studied by US researchers. International data allow us to really test whether our scientific explanations about human behavior actually work (generalize) in the ways that we think they do for people living in social environments that are different from our own. Likewise, with the help of many talented collaborators, I have collected data from diverse local and international populations, including adults in Bangladesh, Serbia, and Ukraine, restaurant servers and customers across the U.S., college students at Southern and Midwestern universities, and adults in the US who participate in online panels (e.g., MTurk; Prolific). 
 
 You can find some of my collaborative research published in crime-related journals like *Criminology*; *Journal of Criminal Justice*; *Journal of Quantitative Criminology*; *Journal of Research in Crime & Delinquency*; and *Justice Quarterly*. You can also find some of it published in interdisciplinary social science journals like *Journal of Research on Adolescence*; *Sociological Methods and Research*; *Social Forces*; and *Social Networks.* Additionally, some of it has been summarized the [Pacific Standard](https://psmag.com/social-justice/working-moms-the-kids-are-all-right-40102#.umpx21fny), [The Conversation](https://theconversation.com/can-we-teach-restaurant-servers-to-treat-all-customers-equally-regardless-of-race-42865), [The Society Pages](https://thesocietypages.org/discoveries/2015/08/12/reducing-murder-rates/), and local [ABC news](https://www.ketv.com/article/link-between-head-injuries-and-criminal-behavior/12104106).
 
-I regularly teach undergraduate and graduate students about scientific theories, research methods, and data analytic techniques. At the undergraduate level, I typically teach courses about theories of crime, deviance, and social control (CJUS P200 & P305) and undergraduate statistics (CJUS K300) at Indiana University Bloomington. At the graduate level, I regularly teach a course on theory construction and analysis (CJUS P502), and I have taught additional topical or independent study courses about replication and reproducibility in the social sciences (CJUS P680), about the foundations of mediation and moderation analyses (P599), and about how to teach undergraduate statistics using R/RMarkdown (P599).     
+I regularly teach undergraduate and graduate students about scientific theories, research methods, and data analytic techniques. I typically teach undergraduate courses about theories of crime, deviance, and social control (CJUS P200 & P305) and undergraduate statistics (CJUS K300) at Indiana University Bloomington. I regularly teach graduates about theory construction and analysis (CJUS P502), and I have taught additional topical or independent study courses on replication and reproducibility in the social sciences (CJUS P680), on the foundations of mediation and moderation analyses (P599), and about how to teach undergraduate statistics using R/RMarkdown (P599).     
 
 ## Education
 
