updated bootstrap icons

--- a/about.qmd
+++ b/about.qmd
@@ -3,7 +3,7 @@ title: "Jon Brauer"
 about:
   template: solana
   links:
-    - icon: collection
+    - icon: journal-code
       text: Blog
       href: https://reluctantcriminologists.com/
     - icon: twitter
@@ -12,13 +12,13 @@ about:
     - icon: github
       text: Github
       href: https://github.com/JonRBrauer
-    - icon: ai-google-scholar
+    - icon: mortarboard-fill
       text: Google Scholar
       href: https://scholar.google.com/citations?user=41mC2ZcAAAAJ&hl=en
     - icon: linkedin
       text: LinkedIn
       href: https://www.linkedin.com/in/jonathan-brauer-6722b1a3/
-    - icon: fa-envelope 
+    - icon: envelope-fill 
       text: Email
       href: mailto:jrbrauer817@gmail.com
 ---
